[project]
name = "asylum-life-crouch-macro"
version = "0.1.0"
description = ""
authors = [
    {name = "Verilisity",email = "179258179+Verilisity@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10 <3.14"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)",
    "pywin32 (>=311,<312)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
nuitka = "^2.7.12"

